# PythonProgramming-NTPU_U4284

./: .cursorignore  .cursorrules  .gitignore  README.md  Sec 1 - Basic.ipynb  Sec 2 - Flow Control.ipynb  Sec 3 - Function, Class.ipynb  Sec 3.1 - case test.py  Sec 4.1 - Package Intro - numpy.ipynb  Sec 4.2 - Package Intro - pandas.ipynb  Sec 4.3 - Package Intro - Visualization tool.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.local.json
homework/: HW1.html  HW1.ipynb  HW2.html  HW2.ipynb  HW3.ipynb  HW3.py
