[project]
name = "codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "asttokens==3.0.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.1",
    "fonttools==4.61.1",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "librt==0.8.1",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.4.2",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pandas==3.0.1",
    "parso==0.8.6",
    "pathspec==1.0.4",
    "pillow==12.1.1",
    "platformdirs==4.9.2",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "schemdraw==0.22",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "wcwidth==0.6.0",
]
